// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposals shows a message if still loading 1`] = `
<div>
  <div
    class="button-container"
  >
    <tmbtn-stub
      id="propose-btn"
      type="secondary"
      value="Create Proposal"
    />
  </div>
   
  <div>
    <tmdatamsg-stub
      icon="gavel"
    >
      <div>
        
        No Governance Proposals
      
      </div>
       
      <div>
        
        There are currently no governance proposals to display.
        Click the 'Create Proposal' button to submit the first proposal of the network!
      
      </div>
    </tmdatamsg-stub>
  </div>
</div>
`;

exports[`PageProposals shows a message if there is nothing to display 1`] = `
<div>
  <div
    class="button-container"
  >
    <tmbtn-stub
      id="propose-btn"
      type="secondary"
      value="Create Proposal"
    />
  </div>
   
  <div>
    <tmdatamsg-stub
      icon="gavel"
    >
      <div>
        
        No Governance Proposals
      
      </div>
       
      <div>
        
        There are currently no governance proposals to display.
        Click the 'Create Proposal' button to submit the first proposal of the network!
      
      </div>
    </tmdatamsg-stub>
  </div>
</div>
`;

exports[`PageProposals shows a proposals table 1`] = `
<div>
  <div
    class="button-container"
  >
    <tmbtn-stub
      id="propose-btn"
      type="secondary"
      value="Create Proposal"
    />
  </div>
   
  <tableproposals-stub
    proposals="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
   
  <modalpropose-stub
    denom="lunies"
  />
</div>
`;
